fixed view on mobile devices and tab caption

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,3 +4,9 @@
   align-items: center;
   height: 90vh;
 }
+
+@media screen and (orientation: portrait) {
+  .main-wrapper {
+    flex-direction: column;
+  }
+}
